@startuml

namespace controller {
      class controller.GameController {
          - createNewBug : boolean
          - timer : Timer
          - timerCreators : ArrayList<Timer>
          + GameController(mainController: MainController, difficulty: int, firstLevel: int, effectsEnable: boolean, musicEnable: boolean)
          + createTimers()
          + doOneLoop()
          + exitGame()
          + handleClick(x: int, y: int)
          + handleTimer()
          + initializeGame()
          + isEffectsEnable(): boolean
          + isMusicEnable(): boolean
          + pauseGame()
          + playEffects(sound: String)
          + playMusic(music: String)
          + resumeGame()
          + setEffectsEnable()
          + setMusicEnable()
          + stopMusic()
          + update()
      }
    }
  

 namespace controller {
      class controller.MainController {
          - highScore : int
          + MainController()
          + getGameController(): GameController
          + getGamePanel(): GamePanel
          + getHighScore(): int
          + getHudPanel(): HUDPanel
          + nextCursor()
          + pauseGame()
          + readHighScore(difficulty: int)
          + resumeGame()
          + setHighScore(highScore: int)
          + setNormalSwatter()
          + setSwatSwatter()
          + startGame(difficulty: int, effectsEnable: boolean, musicEnable: boolean)
          + startMenu()
          + updateHighScore(level: int, difficulty: int)
      }
    }
  

  namespace controller {
      class controller.MenuController {
          - difficulty : int
          - effectsEnable : boolean
          - musicEnable : boolean
          + MenuController(mainController: MainController)
          + getDifficulty(): int
          + isEffectsEnable(): boolean
          + isMusicEnable(): boolean
          + playEffects()
          + setDifficulty(difficulty: int)
          + setEffectsEnable(effectsEnable: boolean)
          + setMusicEnable(musicEnable: boolean)
          + startGame()
      }
    }
  

  controller.GameController o-- model.BugsCreator : bugsCreator
  controller.GameController o-- model.GameModel : gameModel
  controller.GameController o-- model.Bug : bugs
  controller.GameController o-- controller.MainController : mainController
  controller.MainController o-- controller.GameController : gameController
  controller.MainController o-- view.MainView : mainView
  controller.MainController o-- controller.MenuController : menuController
  controller.MenuController o-- controller.MainController : mainController




@enduml
